infra/modules/security-groups/main.tf
resource "aws_security_group" "grafana" {
  name   = "grafana-sg"
  vpc_id = var.vpc_id

  tags = {
    Name = "grafana-sg"
  }
}

resource "aws_security_group" "prometheus" {
  name   = "prometheus-sg"
  vpc_id = var.vpc_id

  tags = {
    Name = "prometheus-sg"
  }
}

resource "aws_security_group" "loki" {
  name   = "loki-sg"
  vpc_id = var.vpc_id

  tags = {
    Name = "loki-sg"
  }
}


resource "aws_security_group" "webserver" {
  name   = "webserver-sg"
  vpc_id = var.vpc_id

  tags = {
    Name = "webserver-sg"
  }
}

# grafana

resource "aws_vpc_security_group_ingress_rule" "grafana_console" {
  security_group_id = aws_security_group.grafana.id

  from_port   = 3000
  to_port     = 3000
  ip_protocol = "tcp"

  cidr_ipv4 = "0.0.0.0/0"
}


resource "aws_vpc_security_group_ingress_rule" "grafana_ssh" {
  security_group_id = aws_security_group.grafana.id

  from_port                    = 22
  to_port                      = 22
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}

# prometheus

resource "aws_vpc_security_group_ingress_rule" "prometheus_ssh" {
  security_group_id = aws_security_group.prometheus.id

  from_port                    = 22
  to_port                      = 22
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "prometheus_console_from_public" {
  security_group_id = aws_security_group.prometheus.id

  from_port   = 9090
  to_port     = 9090
  ip_protocol = "tcp"

  cidr_ipv4 = "0.0.0.0/0"
}


resource "aws_vpc_security_group_ingress_rule" "prometheus_console_from_grafana" {
  security_group_id = aws_security_group.prometheus.id

  from_port                    = 9090
  to_port                      = 9090
  ip_protocol                  = "tcp"
  referenced_security_group_id = aws_security_group.grafana.id
}


# loki

resource "aws_vpc_security_group_ingress_rule" "loki_from_grafana" {
  security_group_id = aws_security_group.loki.id

  from_port   = 3100
  to_port     = 3100
  ip_protocol = "tcp"

  referenced_security_group_id = aws_security_group.grafana.id
}

resource "aws_vpc_security_group_ingress_rule" "loki_from_webservr" {
  security_group_id = aws_security_group.loki.id

  from_port   = 3100
  to_port     = 3100
  ip_protocol = "tcp"

  referenced_security_group_id = aws_security_group.webserver.id
}


resource "aws_vpc_security_group_ingress_rule" "loki_ssh" {
  security_group_id = aws_security_group.loki.id

  from_port                    = 22
  to_port                      = 22
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}


# webserver inbound

resource "aws_vpc_security_group_ingress_rule" "webserver_ssh" {
  security_group_id = aws_security_group.webserver.id

  from_port                    = 22
  to_port                      = 22
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "alloy_ui" {
  security_group_id = aws_security_group.webserver.id

  from_port                    = 12345
  to_port                      = 12345
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}


resource "aws_vpc_security_group_ingress_rule" "webserver_console_from_public" {
  security_group_id = aws_security_group.webserver.id

  from_port                    = 5000
  to_port                      = 5000
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "webserver_console_from_prometheus_sg" {
  security_group_id = aws_security_group.webserver.id

  from_port                    = 5000
  to_port                      = 5000
  ip_protocol                  = "tcp"
  referenced_security_group_id = aws_security_group.prometheus.id
}

resource "aws_vpc_security_group_ingress_rule" "webserver_node_exporter_console_from_public" {
  security_group_id = aws_security_group.webserver.id

  from_port                    = 9100
  to_port                      = 9100
  ip_protocol                  = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "webserver_node_exporter_console_from_prometheus_sg" {
  security_group_id = aws_security_group.webserver.id

  from_port                    = 9100
  to_port                      = 9100
  ip_protocol                  = "tcp"
  referenced_security_group_id = aws_security_group.prometheus.id
}

# grafana outbound
resource "aws_vpc_security_group_egress_rule" "grafana_outbound" {
  security_group_id = aws_security_group.grafana.id

  ip_protocol = "-1"
  cidr_ipv4   = "0.0.0.0/0"
}

# prometheus outbound
resource "aws_vpc_security_group_egress_rule" "prometheus_outbound" {
  security_group_id = aws_security_group.prometheus.id

  ip_protocol = "-1"
  cidr_ipv4   = "0.0.0.0/0"
}

# loki outbound
resource "aws_vpc_security_group_egress_rule" "loki_outbound" {
  security_group_id = aws_security_group.loki.id

  ip_protocol = "-1"
  cidr_ipv4   = "0.0.0.0/0"
}

# webserver outbound
resource "aws_vpc_security_group_egress_rule" "webserver_outbound" {
  security_group_id = aws_security_group.webserver.id

  ip_protocol = "-1"
  cidr_ipv4   = "0.0.0.0/0"
}
